# depscan

./: .gitignore  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
examples/node-project/: package-lock.json  package.json
examples/python-project/: pyproject.toml  requirements.txt
scanner/: __init__.py  cli.py  core.py  detectors.py  models.py  osv_client.py  report.py  utils.py
templates/: report.html.j2
tests/: __init__.py  conftest.py  test_core.py  test_detectors.py  test_osv_client.py  test_report.py  test_utils.py
