[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "depscan"
version = "1.0.0"
description = "Scanner de vulnérabilités pour dépendances de code (Python, Node.js) utilisant l'API OSV"
readme = "README.md"
authors = [
    {name = "Équipe DepScan", email = "contact@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["security", "vulnerability", "dependencies", "scanner", "osv"]
dependencies = [
    "requests>=2.28.0",
    "PyYAML>=6.0",
    "Jinja2>=3.1.0",
    "packaging>=21.0",
    "tomli>=2.0.0; python_version < '3.11'",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
node = [
    "packageurl-python>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/example/depscan"
Repository = "https://github.com/example/depscan.git"
Issues = "https://github.com/example/depscan/issues"
Documentation = "https://depscan.readthedocs.io/"

[project.scripts]
depscan = "scanner.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scanner*"]
exclude = ["tests*", "examples*", "templates*"]

[tool.setuptools.package-data]
"scanner" = ["py.typed"]
"templates" = ["*.j2"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=scanner --cov-report=term-missing"
minversion = "7.0"