[project]
name = "example-python-project"
version = "1.0.0"
description = "An example Python project for testing depscan"
authors = [
    {name = "Test User", email = "test@example.com"}
]
dependencies = [
    "requests==2.31.0",
    "flask==2.3.3",
    "django==4.2.7",
    "cryptography==41.0.7",
    "numpy==1.24.4",
    "pandas==2.0.3",
    "sqlalchemy==2.0.23",
    "celery==5.3.4",
    "pillow==10.1.0",
    "jinja2==3.1.2"
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "black==23.9.1",
    "mypy==1.6.1"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"